--- a/css/main.css
+++ b/css/main.css
@@ -74,10 +74,15 @@ footer {
 
   #column-3 {
     background-color: #B0C4DE;
+    width: 100%;
   }
 
   footer {
     background-color: #E0FFFF;
+  }
+
+  .col-3 {
+    width: 50%;
   }
 
 }
@@ -99,10 +104,15 @@ footer {
 
   #column-3 {
     background-color: #BA55D3;
+    width: 33.3%;
   }
 
   footer {
     background-color: #C71585;
+  }
+
+  .col-3 {
+    width: 33.3%;
   }
 
 }
